Improved layout algorithm. Added a local video picker and preview on NW.js.

--- a/test/visual/default.css
+++ b/test/visual/default.css
@@ -1,6 +1,20 @@
 
-.glantern-view {
+#glantern-container {
+    display: inline-block;
+    position: relative;
+}
+
+.black-background {
     background-color: black;
+}
+
+.absolute {
+    position: absolute;
+}
+
+.glantern-view {
+    position: absolute;
+    z-index: 9999;
 }
 
 .initially-hidden {
